<package format="3">
  <name>drive</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for drive</p>
    <p>This package contains configuration data, 3D models and launch files
for drive robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>robot_state_publisher</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>gz_ros2_control</depend>
  <depend>diff_drive_controller</depend>
  <depend>imu_sensor_broadcaster</depend>
  <depend>joint_state_broadcaster</depend>

  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_interfaces</depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>rviz2</depend>
  
  <exec_depend>ros_gz_sim</exec_depend> 

  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent />
  </export>
</package>